# RubikProject

./: README.md
FinalProjectPROG2/: CMakeLists.txt  README.md
FinalProjectPROG2/src/: cube.c  cube.h  game.c  game.h  hints.c  hints.h  solver.c  solver.h  timer.c  timer.h
FinalProjectPROG2/tests/: test_cube.c
